third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/eq/unknown_variant_attribute.rs
#[derive(derive_more::Eq)]
enum Enum {
    #[eq(unknown)]
    Bar { i: i32 },
}

impl PartialEq for Enum {
    fn eq(&self, _: &Self) -> bool {
        unimplemented!()
    }
}

fn main() {}
